[package]
name = "slq-client"
version = "0.0.0"
edition = "2018"

[dependencies]
borsh = "0.9.0"
borsh-derive = "0.9.0"
solana-sdk = "1.9.4"
solana-client = "1.8.2"
solana-cli-config = "1.8.2"
structopt = "0.3.25"
anyhow = "1.0.45"
log = "0.4.14"
env_logger = "0.9.0"
slq = { path = "../slq", features = ["no-entrypoint"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
